# serial-tcp-bridge

./: CMakeLists.txt  README.md
bridge-arduino/: CMakeLists.txt  platformio.ini
bridge-arduino/include/: BridgeMessage.h  BridgeTypes.h
bridge-arduino/src/: Bridge.cpp  Bridge.h  BridgeDecoder.cpp  BridgeDecoder.h  BridgeEncoder.cpp  BridgeEncoder.h  Scheduler.cpp  Scheduler.h  main.cpp  profile.h
bridge-host/: CMakeLists.txt
bridge-host/src/: Bridge.cpp  Bridge.h  BridgeDecoder.cpp  BridgeDecoder.h  BridgeEncoder.cpp  BridgeEncoder.h  BridgeProperties.h  main.cpp
